# functional-topics

./: README.md
Mandelbrot2/Mandelbrot2/: Mandelbrot.cabal
Mandelbrot2/Mandelbrot2/src/: Main.hs  Render.hs  Shapes.hs
Weekly Exercises/: Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex8.lhs  Readme.md
Weekly Exercises/Ex8/: stack.yaml
Weekly Exercises/Ex8/TypeInference/: package.yaml  stack.yaml  typeinference-example.cabal
Weekly Exercises/Ex8/TypeInference/src/: Interpreter_base.lhs  Main.hs
minesweeper/: .gitignore  Example4.cabal  Readme.md
minesweeper/Example5/: Example4.cabal  LICENSE
minesweeper/Example5/src/: Main.hs
minesweeper/src/: Board.hs  Game.hs  Main.hs  Player.hs  canvas.hs
scotty-example/: ChangeLog.md  LICENSE  README.md  scotty-example.cabal
scotty-example-0.1.0.0/: .gitignore  CHANGELOG.md  LICENSE  package.yaml  scotty-example.cabal  stack.yaml
scotty-example-0.1.0.0/app/: Main.hs  Untitled-1.html
scotty-example-0.1.0.0/src/: Render.hs  ShapeMain.hs  Shapes.hs
scotty-example/app/: Main.hs  Render.hs  Shapes.hs
