name:                Example4
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/g-d-strong/TypeInference#readme
license:             BSD3
license-file:        LICENSE
author:              Glenn Strong
maintainer:          Glenn.Strong@scss.tcd.ie
copyright:           2016
category:            test
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  stack.yaml

executable Example4
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , threepenny-gui, network
